@startuml
scale 0.75

skinparam packageStyle rectangle
skinparam classBackgroundColor White
skinparam classBorderColor Black
top to bottom direction
skinparam ranksep 25
skinparam nodesep 20

together {
package "Kernel" {
    package "Common" {
      class Logger <<static>> {
        + Log(message: string, level: LogLevel = Info) : void
      }
      enum LogLevel
    }

    package "Models" {
      class CardData
      class Pin
      class AccountId
      class AtmSession
    }

    package "Hardware" {
      class CardReader {
        + ReadCard() : CardData
      }
      class CashDispenser {
        + Remaining : decimal
        + CanDispense(amount: decimal) : bool
        + TryDispense(amount: decimal) : bool
        + Refill(amount: decimal) : void
      }
      class CashAcceptor {
        + AcceptCash() : decimal
        + AcceptCash(predefinedAmount: decimal) : decimal
        + EjectCash() : void
        + CollectAllCash() : decimal
      }
      class ReceiptPrinter {
        + PrintReceipt(text: string) : void
      }
    }

    package "Storage" {
      class LocalStorage {
        + ResolvePath(fileName: string) : string
        + LoadOrDefault<T>(fileName: string, defaultValue: T) : T
        + Save<T>(fileName: string, data: T) : void
      }
      class OperationJournal {
        + Entries : IReadOnlyList<OperationEntry>
        + Add(entry: OperationEntry) : OperationEntry
        + Persist() : void
      }
      class OperationEntry {
        + Timestamp : DateTime
        + Operation : string
        + Status : OperationStatus
        + CardNumberMasked : string
        + AccountId : Guid?
        + Amount : decimal?
        + Details : string
        + MaskCard(cardNumber: string) : string
      }
      enum OperationStatus
    }
}
}

package "Contexts" {
  package "Banking" {
    package "Api" {
      interface IBankingService {
        + Authenticate(card: CardData, pin: Pin) : (bool, AccountId?)
        + GetBalance(account: AccountId) : decimal
        + ExecuteWithdrawal(account: AccountId, amount: decimal) : bool
        + ChangePin(card: CardData, oldPin: Pin, newPin: Pin) : bool
        + Deposit(account: AccountId, amount: decimal) : bool
        + Transfer(fromAccount: AccountId, toCardNumber: string, amount: decimal) : bool
      }
    }
    package "Impl" {
      class BankingServiceClient {
        + Authenticate(card: CardData, pin: Pin) : (bool, AccountId?)
        + GetBalance(account: AccountId) : decimal
        + ExecuteWithdrawal(account: AccountId, amount: decimal) : bool
        + ChangePin(card: CardData, oldPin: Pin, newPin: Pin) : bool
        + Deposit(account: AccountId, amount: decimal) : bool
        + Transfer(fromAccount: AccountId, toCardNumber: string, amount: decimal) : bool
      }
    }
  }

  package "Operation" {
    class ATMController {
      - _cardReader : CardReader
      - _cashDispenser : CashDispenser
      - _cashAcceptor : CashAcceptor
      - _bankingService : IBankingService
      - _receiptPrinter : ReceiptPrinter
      - _operationJournal : OperationJournal
      - _currentSession : AtmSession?
      + Setup() : void
      + StartSession(card: CardData, pin: Pin) : AtmSession?
      + CheckBalance(session: AtmSession) : decimal
      + Withdraw(session: AtmSession, amount: decimal) : bool
      + Deposit(session: AtmSession, amount: decimal, cashAlreadyAccepted: bool=false) : bool
      + Transfer(session: AtmSession, toCard: string, amount: decimal) : bool
      + ChangePin(card: CardData, oldPin: Pin, newPin: Pin) : bool
      + PrintJournal() : void
      + EndSession(cardNumber: string?) : void
    }
    class ATMControllerBuilder {
      + WithCardReader(CardReader) : ATMControllerBuilder
      + WithCashDispenser(CashDispenser) : ATMControllerBuilder
      + WithCashAcceptor(CashAcceptor) : ATMControllerBuilder
      + WithBankingService(IBankingService) : ATMControllerBuilder
      + WithReceiptPrinter(ReceiptPrinter) : ATMControllerBuilder
      + WithOperationJournal(OperationJournal) : ATMControllerBuilder
      + Build() : ATMController
    }
  }

  package "Maintenance" {
    class MaintenanceController {
      - _cashDispenser : CashDispenser
      - _cashAcceptor : CashAcceptor
      + AuthenticateCollector(code: string) : bool
      + RefillDispenser(amount: decimal) : void
      + CollectAcceptor() : decimal
      + CheckStatus() : void
    }
  }
}

BankingServiceClient -|> IBankingService
BankingServiceClient o- LocalStorage

ATMController o- CardReader
ATMController o- CashDispenser
ATMController o- CashAcceptor
ATMController o- IBankingService
ATMController o- ReceiptPrinter
ATMController o- OperationJournal
ATMController ..> CardData
ATMController ..> Pin
ATMController ..> AtmSession
ATMController ..> AccountId

ATMControllerBuilder ..> ATMController : builds

OperationJournal o- LocalStorage
OperationJournal ..> OperationEntry
OperationEntry ..> OperationStatus

MaintenanceController o- CashDispenser
MaintenanceController o- CashAcceptor

CardReader ..> CardData

CashDispenser ..> Logger
CashAcceptor ..> Logger
ReceiptPrinter ..> Logger
CardReader ..> Logger
MaintenanceController ..> Logger
@enduml